--- a/views/edit.pug
+++ b/views/edit.pug
@@ -2,7 +2,7 @@ html
     head  
         title Projeto lindo
     body
-        h1 Edit Users Form
+        h1 Edit User Form
         form(action=`/edit/`, method="POST")
             input(type="text", value=user.name, name="userName", placeholder="Name")
             input(type="text", value=user.age, name="age", placeholder="Age")
