--- a/views/form.pug
+++ b/views/form.pug
@@ -6,5 +6,5 @@ html
         form(action="/submit", method="POST")
             input(type="text", name="userName", placeholder="User Name")
             input(type="number", name="age", placeholder="Age")
-            //- input(type="text", name="userPhone", placeholder="User Phone")
+            input(type="text", name="userPhone", placeholder="User Phone")
             button(type="submit") Submit
